Добавляет секцию singup

--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
 </head>
 
 <body>
+
     <!-- Шапка сайта -->
     <header>
         <nav>
-            <a href="/">
+            <a href="./index.html">
                 <img src="./img/logo.svg" alt="Логотип компании">
                 photo
             </a>
@@ -162,7 +163,23 @@
                 </li>
             </ul>
         </section>
+
+        <!-- Signup -->
+        <section>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+            </p>
+
+            <!-- я не джин 🐷 -->
+            <div>
+                <a href="">Join Today</a>
+                <a href="">Contact us</a>
+            </div>
+
+        </section>
     </main>
+
+
 
     <!-- Подвал -->
     <footer>
