--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-
+    <img src="./img/logo-4.svg" alt="">
     <!-- Шапка сайта -->
     <header>
         <nav>
@@ -23,6 +23,7 @@
                 <li><a href="">Pricing</a></li>
                 <li><a href="">Community</a></li>
                 <li><a href="/support.html">Support</a></li>
+                <li><a href="/wireframes.html">Wireframes</a></li>
             </ul>
 
             <ul>
@@ -58,7 +59,8 @@
                 <li>
                     <h3>Lorem ipsum dolor</h3>
                     <p>
-                        Amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+                        Amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+                        magna
                         aliqua. Ut enim ad minim
                         veniam, quis nostrud exercitation ullamco laboris nisi.
                     </p>
@@ -67,7 +69,8 @@
                 <li>
                     <h3>Nemo enim ipsam</h3>
                     <p>
-                        Consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est,
+                        Consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam
+                        est,
                         qui
                         dolorem ipsum quia
                         dolor sit amet, consectetur, adipisci velit, sed quia non numquam.
@@ -177,13 +180,135 @@
             </div>
 
         </section>
+
+        <!-- body вариант 2 -->
+        <section>
+            <h2>Snap photos and share like never before</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore</p>
+            <ul>
+                <li>
+                    <h3>Sed ut perspiciatis</h3>
+                    <p>
+                        Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia
+                        consequuntur.
+                    </p>
+                </li>
+                <li>
+                    <h3>Lorem ipsum dolor</h3>
+                    <p>
+                        Amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+                        aliqua.
+                    </p>
+                </li>
+                <li>
+                    <h3>Nemo enim ipsam</h3>
+                    <p>
+                        Consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est,
+                        qui
+                        dolorem.
+                    </p>
+                </li>
+            </ul>
+            <img src="" alt="">
+        </section>
+
+        <!-- body вариант 3 -->
+        <section>
+            <h2>Snap photos and share like never before</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore</p>
+            <ul>
+                <li>
+                    <img src="./img/rectangle.jpg" alt="Picture" width="686" height="400">
+                    <h3>Sed ut perspiciatis</h3>
+                    <p>Sed ut perspiciatis</p>
+                </li>
+                <li>
+                    <img src="./img/rectangle.jpg" alt="Picture" width="686" height="400">
+                    <h3>Lorem ipsum dolor</h3>
+                    <p>Amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+                        aliqua.</p>
+                </li>
+            </ul>
+        </section>
+
+        <!-- body вариант 4 -->
+        <section>
+            <h2>Snap photos and share like never before</h2>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+            </p>
+            <ul>
+                <li>
+                    <a href="">
+                        <img src="./img/icon.svg" alt="Логотип компании">
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        <img src="./img/icon.svg" alt="Логотип компании">
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        <img src="./img/icon.svg" alt="Логотип компании">
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        <img src="./img/icon.svg" alt="Логотип компании">
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        <img src="./img/icon.svg" alt="Логотип компании">
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        <img src="./img/icon.svg" alt="Логотип компании">
+                    </a>
+                </li>
+            </ul>
+            <article>
+                <img src="./img/placeholder.png" alt="" width="600">
+                <h3>Sed ut perspiciatis unde omnis</h3>
+                <p>
+                    Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur
+                    magni
+                    dolores eos qui
+                    ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet.
+                </p>
+            </article>
+        </section>
     </main>
-
-
 
     <!-- Подвал -->
     <footer>
-        Футер
+        <ul>
+            <li><a href="">Mobile app</a></li>
+            <li><a href="">Community</a></li>
+            <li><a href="">Company</a></li>
+        </ul>
+
+        <a href="./index.html">
+            <img src="./img/logo.svg" alt="Логотип компании">
+            photo
+        </a>
+
+        <ul>
+            <li><a href="">Help desk</a></li>
+            <li><a href="">Blog</a></li>
+            <li><a href="">Resources</a></li>
+        </ul>
+
+        <ul>
+            <li><a href="" aria-label="Facebook link"></a></li>
+            <li><a href="" aria-label="Twitter link"></a></li>
+            <li><a href="" aria-label="Instagrame link"></a></li>
+            <li><a href="" aria-label="LinkedIn link"></a></li>
+        </ul>
+
+        <p>&copy; Photo, Inc. 2019. We love our users!</p>
     </footer>
 </body>
 
