--- a/index.html
+++ b/index.html
@@ -5,28 +5,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Главная страница</title>
+    <title>Photo app</title>
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 
 <body>
-    <img src="./img/logo-4.svg" alt="">
+    <a href="" class="test-link">Тест линк</a>
+
     <!-- Шапка сайта -->
-    <header>
+    <header class="page-header">
         <nav>
-            <a href="./index.html">
-                <img src="./img/logo.svg" alt="Логотип компании">
+            <a href="./index.html" class="logo">
+                <img src="./images/logo.svg" alt="Логотип компании">
                 photo
             </a>
 
-            <ul>
+            <ul class="site-nav">
                 <li><a href="">Features</a></li>
                 <li><a href="">Pricing</a></li>
                 <li><a href="">Community</a></li>
-                <li><a href="/support.html">Support</a></li>
-                <li><a href="/wireframes.html">Wireframes</a></li>
+                <li><a href="">Support</a></li>
             </ul>
 
-            <ul>
+            <ul class="auth-nav">
                 <li><a href="">Log in</a></li>
                 <li><a href="">Register</a></li>
             </ul>
@@ -95,7 +96,7 @@
             <h2>Example of work</h2>
             <ul>
                 <li>
-                    <img src="./img/placeholder.png" alt="Примеры работ" width="750">
+                    <img src="./images/placeholder.png" alt="Примеры работ" width="750">
                     <h3>Sed ut perspiciatis unde omnis</h3>
                     <p>
                         Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia
@@ -105,7 +106,7 @@
                     </p>
                 </li>
                 <li>
-                    <img src="./img/placeholder.png" alt="Примеры работ" width="750">
+                    <img src="./images/placeholder.png" alt="Примеры работ" width="750">
                     <h3>Sed ut perspiciatis unde omnis</h3>
                     <p>
                         Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia
@@ -126,42 +127,42 @@
             <ul>
                 <li>
                     <a href="">
-                        <img src="./img/icon.svg" alt="Логотип компании">
+                        <img src="./images/icon.svg" alt="Логотип компании">
                     </a>
                 </li>
                 <li>
                     <a href="">
-                        <img src="./img/icon.svg" alt="Логотип компании">
+                        <img src="./images/icon.svg" alt="Логотип компании">
                     </a>
                 </li>
                 <li>
                     <a href="">
-                        <img src="./img/icon.svg" alt="Логотип компании">
+                        <img src="./images/icon.svg" alt="Логотип компании">
                     </a>
                 </li>
                 <li>
                     <a href="">
-                        <img src="./img/icon.svg" alt="Логотип компании">
+                        <img src="./images/icon.svg" alt="Логотип компании">
                     </a>
                 </li>
                 <li>
                     <a href="">
-                        <img src="./img/icon.svg" alt="Логотип компании">
+                        <img src="./images/icon.svg" alt="Логотип компании">
                     </a>
                 </li>
                 <li>
                     <a href="">
-                        <img src="./img/icon.svg" alt="Логотип компании">
+                        <img src="./images/icon.svg" alt="Логотип компании">
                     </a>
                 </li>
                 <li>
                     <a href="">
-                        <img src="./img/icon.svg" alt="Логотип компании">
+                        <img src="./images/icon.svg" alt="Логотип компании">
                     </a>
                 </li>
                 <li>
                     <a href="">
-                        <img src="./img/icon.svg" alt="Логотип компании">
+                        <img src="./images/icon.svg" alt="Логотип компании">
                     </a>
                 </li>
             </ul>
@@ -218,12 +219,12 @@
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore</p>
             <ul>
                 <li>
-                    <img src="./img/rectangle.jpg" alt="Picture" width="686" height="400">
+                    <img src="./images/rectangle.jpg" alt="Picture" width="686" height="400">
                     <h3>Sed ut perspiciatis</h3>
                     <p>Sed ut perspiciatis</p>
                 </li>
                 <li>
-                    <img src="./img/rectangle.jpg" alt="Picture" width="686" height="400">
+                    <img src="./images/rectangle.jpg" alt="Picture" width="686" height="400">
                     <h3>Lorem ipsum dolor</h3>
                     <p>Amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
                         aliqua.</p>
@@ -240,37 +241,37 @@
             <ul>
                 <li>
                     <a href="">
-                        <img src="./img/icon.svg" alt="Логотип компании">
+                        <img src="./images/icon.svg" alt="Логотип компании">
                     </a>
                 </li>
                 <li>
                     <a href="">
-                        <img src="./img/icon.svg" alt="Логотип компании">
+                        <img src="./images/icon.svg" alt="Логотип компании">
                     </a>
                 </li>
                 <li>
                     <a href="">
-                        <img src="./img/icon.svg" alt="Логотип компании">
+                        <img src="./images/icon.svg" alt="Логотип компании">
                     </a>
                 </li>
                 <li>
                     <a href="">
-                        <img src="./img/icon.svg" alt="Логотип компании">
+                        <img src="./images/icon.svg" alt="Логотип компании">
                     </a>
                 </li>
                 <li>
                     <a href="">
-                        <img src="./img/icon.svg" alt="Логотип компании">
+                        <img src="./images/icon.svg" alt="Логотип компании">
                     </a>
                 </li>
                 <li>
                     <a href="">
-                        <img src="./img/icon.svg" alt="Логотип компании">
+                        <img src="./images/icon.svg" alt="Логотип компании">
                     </a>
                 </li>
             </ul>
             <article>
-                <img src="./img/placeholder.png" alt="" width="600">
+                <img src="./images/placeholder.png" alt="" width="600">
                 <h3>Sed ut perspiciatis unde omnis</h3>
                 <p>
                     Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur
@@ -291,7 +292,7 @@
         </ul>
 
         <a href="./index.html">
-            <img src="./img/logo.svg" alt="Логотип компании">
+            <img src="./images/logo.svg" alt="Логотип компании">
             photo
         </a>
 
