Добавляет классы для разметки

--- a/index.html
+++ b/index.html
@@ -6,30 +6,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Photo app</title>
-    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="./css/common.css">
+    <link rel="stylesheet" href="./css/main.css">
 </head>
 
 <body>
-    <a href="" class="test-link">Тест линк</a>
-
     <!-- Шапка сайта -->
-    <header class="page-header">
+    <header>
         <nav>
             <a href="./index.html" class="logo">
                 <img src="./images/logo.svg" alt="Логотип компании">
                 photo
             </a>
 
-            <ul class="site-nav">
-                <li><a href="">Features</a></li>
-                <li><a href="">Pricing</a></li>
-                <li><a href="">Community</a></li>
-                <li><a href="">Support</a></li>
+            <ul class="site-nav list">
+                <li><a href="" class="link current">Features</a></li>
+                <li><a href="" class="link">Pricing</a></li>
+                <li><a href="./community.html" class="link">Community</a></li>
+                <li><a href="" class="link">Support</a></li>
             </ul>
 
-            <ul class="auth-nav">
-                <li><a href="">Log in</a></li>
-                <li><a href="">Register</a></li>
+            <ul class="auth-nav list">
+                <li><a href="" class="button secondary">Log in</a></li>
+                <li><a href="" class="button primary">Register</a></li>
             </ul>
         </nav>
     </header>
@@ -37,38 +36,38 @@
     <!-- Уникальный контент -->
     <main>
         <!-- Герой -->
-        <section>
-            <h1>The largest community of photo enthusiasts</h1>
-            <a href="">Join Today</a>
+        <section class="hero">
+            <h1 class="hero-title">The largest community of photo enthusiasts</h1>
+            <a href="" class="button primary">Join Today</a>
         </section>
 
         <!-- Преимущества -->
-        <section>
-            <h2>Snap photos and share like <br> never before</h2>
+        <section class="section">
+            <h2 class="section-title">Snap photos and share like <br> never before</h2>
 
-            <ul>
+            <ul class="feature-list">
                 <li>
-                    <h3>Sed ut perspiciatis</h3>
+                    <h3 class="title">Sed ut perspiciatis</h3>
                     <p>
                         Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia
                         consequuntur
                         magni dolores eos qui
                         ratione voluptatem sequi nesciunt. Neque porro quisquam est.
                     </p>
-                    <a href="">Learn more</a>
+                    <a href="" class="button secondary">Learn more</a>
                 </li>
                 <li>
-                    <h3>Lorem ipsum dolor</h3>
+                    <h3 class="title">Lorem ipsum dolor</h3>
                     <p>
                         Amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
                         magna
                         aliqua. Ut enim ad minim
                         veniam, quis nostrud exercitation ullamco laboris nisi.
                     </p>
-                    <a href="">Learn more</a>
+                    <a href="" class="button secondary">Learn more</a>
                 </li>
                 <li>
-                    <h3>Nemo enim ipsam</h3>
+                    <h3 class="title">Nemo enim ipsam</h3>
                     <p>
                         Consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam
                         est,
@@ -76,28 +75,28 @@
                         dolorem ipsum quia
                         dolor sit amet, consectetur, adipisci velit, sed quia non numquam.
                     </p>
-                    <a href="">Learn more</a>
+                    <a href="" class="button secondary">Learn more</a>
                 </li>
                 <li>
-                    <h3>Tempor incididunt</h3>
+                    <h3 class="title">Tempor incididunt</h3>
                     <p>
                         Eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia
                         dolor
                         sit amet, consectetur,
                         adipisci velit, sed quia non numquam eius modi tempora.
                     </p>
-                    <a href="">Learn more</a>
+                    <a href="" class="link">Learn more</a>
                 </li>
             </ul>
         </section>
 
         <!-- Примеры работ -->
-        <section>
-            <h2>Example of work</h2>
-            <ul>
+        <section class="section">
+            <h2 class="section-title">Example of work</h2>
+            <ul class="work-list">
                 <li>
                     <img src="./images/placeholder.png" alt="Примеры работ" width="750">
-                    <h3>Sed ut perspiciatis unde omnis</h3>
+                    <h3 class="title">Sed ut perspiciatis unde omnis</h3>
                     <p>
                         Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia
                         consequuntur
@@ -107,7 +106,7 @@
                 </li>
                 <li>
                     <img src="./images/placeholder.png" alt="Примеры работ" width="750">
-                    <h3>Sed ut perspiciatis unde omnis</h3>
+                    <h3 class="title">Sed ut perspiciatis unde omnis</h3>
                     <p>
                         Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia
                         consequuntur
@@ -118,9 +117,9 @@
             </ul>
         </section>
 
-        <!-- Testimonial -->
-        <section>
-            <h2>You’re in good company</h2>
+        <!-- Клиенты -->
+        <section class="section">
+            <h2 class="section-title">You’re in good company</h2>
             <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
             </p>
@@ -168,7 +167,7 @@
             </ul>
         </section>
 
-        <!-- Signup -->
+        <!-- Регистрация -->
         <section>
             <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
@@ -176,110 +175,9 @@
 
             <!-- я не джин 🐷 -->
             <div>
-                <a href="">Join Today</a>
-                <a href="">Contact us</a>
+                <a href="" class="button primary">Join Today</a>
+                <a href="" class="button secondary">Contact us</a>
             </div>
-
-        </section>
-
-        <!-- body вариант 2 -->
-        <section>
-            <h2>Snap photos and share like never before</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore</p>
-            <ul>
-                <li>
-                    <h3>Sed ut perspiciatis</h3>
-                    <p>
-                        Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia
-                        consequuntur.
-                    </p>
-                </li>
-                <li>
-                    <h3>Lorem ipsum dolor</h3>
-                    <p>
-                        Amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-                        aliqua.
-                    </p>
-                </li>
-                <li>
-                    <h3>Nemo enim ipsam</h3>
-                    <p>
-                        Consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est,
-                        qui
-                        dolorem.
-                    </p>
-                </li>
-            </ul>
-            <img src="" alt="">
-        </section>
-
-        <!-- body вариант 3 -->
-        <section>
-            <h2>Snap photos and share like never before</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore</p>
-            <ul>
-                <li>
-                    <img src="./images/rectangle.jpg" alt="Picture" width="686" height="400">
-                    <h3>Sed ut perspiciatis</h3>
-                    <p>Sed ut perspiciatis</p>
-                </li>
-                <li>
-                    <img src="./images/rectangle.jpg" alt="Picture" width="686" height="400">
-                    <h3>Lorem ipsum dolor</h3>
-                    <p>Amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-                        aliqua.</p>
-                </li>
-            </ul>
-        </section>
-
-        <!-- body вариант 4 -->
-        <section>
-            <h2>Snap photos and share like never before</h2>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-            </p>
-            <ul>
-                <li>
-                    <a href="">
-                        <img src="./images/icon.svg" alt="Логотип компании">
-                    </a>
-                </li>
-                <li>
-                    <a href="">
-                        <img src="./images/icon.svg" alt="Логотип компании">
-                    </a>
-                </li>
-                <li>
-                    <a href="">
-                        <img src="./images/icon.svg" alt="Логотип компании">
-                    </a>
-                </li>
-                <li>
-                    <a href="">
-                        <img src="./images/icon.svg" alt="Логотип компании">
-                    </a>
-                </li>
-                <li>
-                    <a href="">
-                        <img src="./images/icon.svg" alt="Логотип компании">
-                    </a>
-                </li>
-                <li>
-                    <a href="">
-                        <img src="./images/icon.svg" alt="Логотип компании">
-                    </a>
-                </li>
-            </ul>
-            <article>
-                <img src="./images/placeholder.png" alt="" width="600">
-                <h3>Sed ut perspiciatis unde omnis</h3>
-                <p>
-                    Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur
-                    magni
-                    dolores eos qui
-                    ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet.
-                </p>
-            </article>
         </section>
     </main>
 
