--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
 </head>
 
 <body>
+
+    <p class="text">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur aspernatur beatae autem ex tenetur magni
+        necessitatibus. Libero fuga inventore doloribus nemo praesentium quos! Nulla, magnam odio. Dolor possimus nihil
+        reiciendis deleniti voluptatum adipisci nisi placeat molestias, corrupti veritatis voluptatibus aperiam!
+    </p>
     <!-- Шапка сайта -->
     <header>
         <nav>
