--- a/index.html
+++ b/index.html
@@ -6,17 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Photo app</title>
-    <link rel="stylesheet" href="./css/common.css">
+    <link href="https://fonts.googleapis.com/css2?family=Comfortaa&family=Montserrat:wght@400;500;700&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="./css/main.css">
 </head>
 
 <body>
-
-    <p class="text">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur aspernatur beatae autem ex tenetur magni
-        necessitatibus. Libero fuga inventore doloribus nemo praesentium quos! Nulla, magnam odio. Dolor possimus nihil
-        reiciendis deleniti voluptatum adipisci nisi placeat molestias, corrupti veritatis voluptatibus aperiam!
-    </p>
     <!-- Шапка сайта -->
     <header>
         <nav>
@@ -28,7 +23,7 @@
             <ul class="site-nav list">
                 <li><a href="" class="link current">Features</a></li>
                 <li><a href="" class="link">Pricing</a></li>
-                <li><a href="./community.html" class="link">Community</a></li>
+                <li><a href="" class="link">Community</a></li>
                 <li><a href="" class="link">Support</a></li>
             </ul>
 
