--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <section class="section">
             <h2 class="section-title">Snap photos and share like <br> never before</h2>
 
-            <ul class="feature-list">
+            <ul class="feature-list list">
                 <li>
                     <h3 class="title">Sed ut perspiciatis</h3>
                     <p>
@@ -86,7 +86,7 @@
                         sit amet, consectetur,
                         adipisci velit, sed quia non numquam eius modi tempora.
                     </p>
-                    <a href="" class="link">Learn more</a>
+                    <a href="" class="button secondary">Learn more</a>
                 </li>
             </ul>
         </section>
@@ -94,7 +94,7 @@
         <!-- Примеры работ -->
         <section class="section">
             <h2 class="section-title">Example of work</h2>
-            <ul class="work-list">
+            <ul class="work-list list">
                 <li>
                     <img src="./images/placeholder.png" alt="Примеры работ" width="750">
                     <h3 class="title">Sed ut perspiciatis unde omnis</h3>
@@ -121,10 +121,10 @@
         <!-- Клиенты -->
         <section class="section">
             <h2 class="section-title">You’re in good company</h2>
-            <p>
+            <p class="section-description">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
             </p>
-            <ul>
+            <ul class="list">
                 <li>
                     <a href="">
                         <img src="./images/icon.svg" alt="Логотип компании">
@@ -170,7 +170,7 @@
 
         <!-- Регистрация -->
         <section>
-            <p>
+            <p class="section-description">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
             </p>
 
@@ -184,24 +184,24 @@
 
     <!-- Подвал -->
     <footer>
-        <ul>
+        <ul class="list">
             <li><a href="">Mobile app</a></li>
             <li><a href="">Community</a></li>
             <li><a href="">Company</a></li>
         </ul>
 
-        <a href="./index.html">
+        <a href="./index.html" class="logo">
             <img src="./images/logo.svg" alt="Логотип компании">
             photo
         </a>
 
-        <ul>
+        <ul class="list">
             <li><a href="">Help desk</a></li>
             <li><a href="">Blog</a></li>
             <li><a href="">Resources</a></li>
         </ul>
 
-        <ul>
+        <ul class="list">
             <li><a href="" aria-label="Facebook link"></a></li>
             <li><a href="" aria-label="Twitter link"></a></li>
             <li><a href="" aria-label="Instagrame link"></a></li>
