--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             </a>
 
             <ul class="site-nav list">
+                <li><a href="./compendium.html" class="link">Разбор конспекта</a></li>
                 <li><a href="" class="link current">Features</a></li>
                 <li><a href="" class="link">Pricing</a></li>
                 <li><a href="" class="link">Community</a></li>
