--- a/compendium.html
+++ b/compendium.html
@@ -10,6 +10,10 @@
 <body>
     <a href="./index.html">Обратно на главную</a>
 
-    <div class="box">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta commodi, delectus eveniet laudantium repellendus quibusdam cumque placeat blanditiis sapiente sequi?</div>
+<section>
+    <h2>Lorem ipsum dolor sit amet.</h2>
+</section>
+    
+
 </body>
 </html>
