--- a/compendium.html
+++ b/compendium.html
@@ -10,8 +10,10 @@
 <body>
     <a href="./index.html">Обратно на главную</a>
 
-<section>
-    <h2>Lorem ipsum dolor sit amet.</h2>
-</section>
+    <a href="" class="btn">
+        <span></span>
+        Нажми меня
+    </a>
+
 </body>
 </html>
