add block for container

--- a/compendium.html
+++ b/compendium.html
@@ -11,9 +11,25 @@
     <a href="./index.html">Обратно на главную</a>
 
     <a href="" class="btn">
-        <span></span>
+        <span class="btn-icon"></span>
         Нажми меня
     </a>
 
+    <div class="box"></div>
+    
+    <div class="container">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic consectetur delectus est porro itaque blanditiis autem
+            inventore eaque mollitia odio.</p>
+        <p>Quam sint necessitatibus, consequuntur error numquam, sit quidem voluptate veritatis facilis atque fugit ipsum
+            ducimus odio nemo laudantium, eligendi tempora?</p>
+        <p>Natus ex labore impedit et rerum. Nobis excepturi voluptas libero, vitae nemo voluptatum impedit vel ex illo sint,
+            ratione accusantium?</p>
+        <p>Eum, laudantium magni. Fugit quaerat cupiditate deleniti ducimus excepturi! Aspernatur dolores minima, sunt maiores
+            cupiditate nihil obcaecati cumque corporis eos.</p>
+        <p>Similique iure exercitationem illum ut animi. Adipisci voluptas eius porro dignissimos consectetur, molestias debitis
+            consequuntur. Laudantium temporibus voluptates commodi assumenda.</p>
+        <p>Pariatur eligendi animi eum facilis commodi cum perferendis exercitationem hic accusantium beatae blanditiis deserunt
+            placeat, quos, eaque recusandae eius architecto.</p>
+    </div>
 </body>
 </html>
