--- a/index.html
+++ b/index.html
@@ -1,217 +1,219 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Photo app</title>
-    <link href="https://fonts.googleapis.com/css2?family=Comfortaa&family=Montserrat:wght@400;500;700&display=swap"
-        rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css">
-    <link rel="stylesheet" href="./css/main.css">
-</head>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Comfortaa&family=Montserrat:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+    />
+    <link rel="stylesheet" href="./css/main.css" />
+  </head>
 
-<body>
+  <body>
     <!-- Шапка сайта -->
-    <header>
-        <nav>
-            <a href="./index.html" class="logo">
-                <img src="./images/logo.svg" alt="Логотип компании">
-                photo
-            </a>
 
-            <ul class="site-nav list">
-                <li><a href="./compendium.html" class="link">Разбор конспекта</a></li>
-                <li><a href="" class="link current">Features</a></li>
-                <li><a href="" class="link">Pricing</a></li>
-                <li><a href="" class="link">Community</a></li>
-                <li><a href="" class="link">Support</a></li>
-            </ul>
+    <header class="page-header">
+      <nav class="container">
+        <a href="./index.html" class="logo">
+          <img src="./images/logo.svg" alt="Логотип компании" />
+          photo
+        </a>
 
-            <ul class="auth-nav list">
-                <li><a href="" class="button secondary">Log in</a></li>
-                <li><a href="" class="button primary">Register</a></li>
-            </ul>
-        </nav>
+        <ul class="site-nav list">
+          <li><a href="./compendium.html" class="link">Разбор конспекта</a></li>
+          <li><a href="" class="link current">Features</a></li>
+          <li><a href="" class="link">Pricing</a></li>
+          <li><a href="" class="link">Community</a></li>
+          <li><a href="" class="link">Support</a></li>
+        </ul>
+
+        <ul class="auth-nav list">
+          <li><a href="" class="button secondary">Log in</a></li>
+          <li><a href="" class="button primary">Register</a></li>
+        </ul>
+      </nav>
     </header>
 
     <!-- Уникальный контент -->
     <main>
-        <!-- Герой -->
-        <section class="hero">
-            <h1 class="hero-title">The largest community of photo enthusiasts</h1>
-            <a href="" class="button primary">Join Today</a>
-        </section>
+      <!-- Герой -->
+      <section class="hero">
+        <h1 class="hero-title">The largest community of photo enthusiasts</h1>
+        <a href="" class="button primary">Join Today</a>
+      </section>
 
-        <!-- Преимущества -->
-        <section class="section">
-            <h2 class="section-title">Snap photos and share like <br> never before</h2>
+      <!-- Преимущества -->
+      <section class="section">
+        <h2 class="section-title">
+          Snap photos and share like <br />
+          never before
+        </h2>
 
-            <ul class="feature-list list">
-                <li>
-                    <h3 class="title">Sed ut perspiciatis</h3>
-                    <p>
-                        Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia
-                        consequuntur
-                        magni dolores eos qui
-                        ratione voluptatem sequi nesciunt. Neque porro quisquam est.
-                    </p>
-                    <a href="" class="button secondary">Learn more</a>
-                </li>
-                <li>
-                    <h3 class="title">Lorem ipsum dolor</h3>
-                    <p>
-                        Amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-                        magna
-                        aliqua. Ut enim ad minim
-                        veniam, quis nostrud exercitation ullamco laboris nisi.
-                    </p>
-                    <a href="" class="button secondary">Learn more</a>
-                </li>
-                <li>
-                    <h3 class="title">Nemo enim ipsam</h3>
-                    <p>
-                        Consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam
-                        est,
-                        qui
-                        dolorem ipsum quia
-                        dolor sit amet, consectetur, adipisci velit, sed quia non numquam.
-                    </p>
-                    <a href="" class="button secondary">Learn more</a>
-                </li>
-                <li>
-                    <h3 class="title">Tempor incididunt</h3>
-                    <p>
-                        Eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia
-                        dolor
-                        sit amet, consectetur,
-                        adipisci velit, sed quia non numquam eius modi tempora.
-                    </p>
-                    <a href="" class="button secondary">Learn more</a>
-                </li>
-            </ul>
-        </section>
-
-        <!-- Примеры работ -->
-        <section class="section">
-            <h2 class="section-title">Example of work</h2>
-            <ul class="work-list list">
-                <li>
-                    <img src="./images/placeholder.png" alt="Примеры работ" width="750">
-                    <h3 class="title">Sed ut perspiciatis unde omnis</h3>
-                    <p>
-                        Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia
-                        consequuntur
-                        magni dolores eos qui
-                        ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem.
-                    </p>
-                </li>
-                <li>
-                    <img src="./images/placeholder.png" alt="Примеры работ" width="750">
-                    <h3 class="title">Sed ut perspiciatis unde omnis</h3>
-                    <p>
-                        Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia
-                        consequuntur
-                        magni dolores eos qui
-                        ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem.
-                    </p>
-                </li>
-            </ul>
-        </section>
-
-        <!-- Клиенты -->
-        <section class="section">
-            <h2 class="section-title">You’re in good company</h2>
-            <p class="section-description">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+        <ul class="feature-list list">
+          <li>
+            <h3 class="title">Sed ut perspiciatis</h3>
+            <p>
+              Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia
+              consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro
+              quisquam est.
             </p>
-            <ul class="list">
-                <li>
-                    <a href="">
-                        <img src="./images/icon.svg" alt="Логотип компании">
-                    </a>
-                </li>
-                <li>
-                    <a href="">
-                        <img src="./images/icon.svg" alt="Логотип компании">
-                    </a>
-                </li>
-                <li>
-                    <a href="">
-                        <img src="./images/icon.svg" alt="Логотип компании">
-                    </a>
-                </li>
-                <li>
-                    <a href="">
-                        <img src="./images/icon.svg" alt="Логотип компании">
-                    </a>
-                </li>
-                <li>
-                    <a href="">
-                        <img src="./images/icon.svg" alt="Логотип компании">
-                    </a>
-                </li>
-                <li>
-                    <a href="">
-                        <img src="./images/icon.svg" alt="Логотип компании">
-                    </a>
-                </li>
-                <li>
-                    <a href="">
-                        <img src="./images/icon.svg" alt="Логотип компании">
-                    </a>
-                </li>
-                <li>
-                    <a href="">
-                        <img src="./images/icon.svg" alt="Логотип компании">
-                    </a>
-                </li>
-            </ul>
-        </section>
-
-        <!-- Регистрация -->
-        <section>
-            <p class="section-description">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+            <a href="" class="button secondary">Learn more</a>
+          </li>
+          <li>
+            <h3 class="title">Lorem ipsum dolor</h3>
+            <p>
+              Amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+              dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+              laboris nisi.
             </p>
+            <a href="" class="button secondary">Learn more</a>
+          </li>
+          <li>
+            <h3 class="title">Nemo enim ipsam</h3>
+            <p>
+              Consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro
+              quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed
+              quia non numquam.
+            </p>
+            <a href="" class="button secondary">Learn more</a>
+          </li>
+          <li>
+            <h3 class="title">Tempor incididunt</h3>
+            <p>
+              Eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum
+              quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi
+              tempora.
+            </p>
+            <a href="" class="button secondary">Learn more</a>
+          </li>
+        </ul>
+      </section>
 
-            <!-- я не джин 🐷 -->
-            <div>
-                <a href="" class="button primary">Join Today</a>
-                <a href="" class="button secondary">Contact us</a>
-            </div>
-        </section>
+      <!-- Примеры работ -->
+      <section class="section">
+        <h2 class="section-title">Example of work</h2>
+        <ul class="work-list list">
+          <li>
+            <img src="./images/placeholder.png" alt="Примеры работ" width="750" />
+            <h3 class="title">Sed ut perspiciatis unde omnis</h3>
+            <p>
+              Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia
+              consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro
+              quisquam est, qui dolorem.
+            </p>
+          </li>
+          <li>
+            <img src="./images/placeholder.png" alt="Примеры работ" width="750" />
+            <h3 class="title">Sed ut perspiciatis unde omnis</h3>
+            <p>
+              Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia
+              consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro
+              quisquam est, qui dolorem.
+            </p>
+          </li>
+        </ul>
+      </section>
+
+      <!-- Клиенты -->
+      <section class="section">
+        <h2 class="section-title">You’re in good company</h2>
+        <p class="section-description">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+          ut labore
+        </p>
+        <ul class="list">
+          <li>
+            <a href="">
+              <img src="./images/icon.svg" alt="Логотип компании" />
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img src="./images/icon.svg" alt="Логотип компании" />
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img src="./images/icon.svg" alt="Логотип компании" />
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img src="./images/icon.svg" alt="Логотип компании" />
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img src="./images/icon.svg" alt="Логотип компании" />
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img src="./images/icon.svg" alt="Логотип компании" />
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img src="./images/icon.svg" alt="Логотип компании" />
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img src="./images/icon.svg" alt="Логотип компании" />
+            </a>
+          </li>
+        </ul>
+      </section>
+
+      <!-- Регистрация -->
+      <section>
+        <p class="section-description">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+          ut labore
+        </p>
+
+        <!-- я не джин 🐷 -->
+        <div>
+          <a href="" class="button primary">Join Today</a>
+          <a href="" class="button secondary">Contact us</a>
+        </div>
+      </section>
     </main>
 
     <!-- Подвал -->
     <footer>
-        <ul class="list">
-            <li><a href="">Mobile app</a></li>
-            <li><a href="">Community</a></li>
-            <li><a href="">Company</a></li>
-        </ul>
+      <ul class="list">
+        <li><a href="">Mobile app</a></li>
+        <li><a href="">Community</a></li>
+        <li><a href="">Company</a></li>
+      </ul>
 
-        <a href="./index.html" class="logo">
-            <img src="./images/logo.svg" alt="Логотип компании">
-            photo
-        </a>
+      <a href="./index.html" class="logo">
+        <img src="./images/logo.svg" alt="Логотип компании" />
+        photo
+      </a>
 
-        <ul class="list">
-            <li><a href="">Help desk</a></li>
-            <li><a href="">Blog</a></li>
-            <li><a href="">Resources</a></li>
-        </ul>
+      <ul class="list">
+        <li><a href="">Help desk</a></li>
+        <li><a href="">Blog</a></li>
+        <li><a href="">Resources</a></li>
+      </ul>
 
-        <ul class="list">
-            <li><a href="" aria-label="Facebook link"></a></li>
-            <li><a href="" aria-label="Twitter link"></a></li>
-            <li><a href="" aria-label="Instagrame link"></a></li>
-            <li><a href="" aria-label="LinkedIn link"></a></li>
-        </ul>
+      <ul class="list">
+        <li><a href="" aria-label="Facebook link"></a></li>
+        <li><a href="" aria-label="Twitter link"></a></li>
+        <li><a href="" aria-label="Instagrame link"></a></li>
+        <li><a href="" aria-label="LinkedIn link"></a></li>
+      </ul>
 
-        <p>&copy; Photo, Inc. 2019. We love our users!</p>
+      <p>&copy; Photo, Inc. 2019. We love our users!</p>
     </footer>
-</body>
-
+  </body>
 </html>
