--- a/index.html
+++ b/index.html
@@ -179,47 +179,73 @@
       </section>
 
       <!-- Регистрация -->
-      <section>
-        <p class="section-description">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-          ut labore
-        </p>
+      <section class="section">
+        <div class="container">
+          <p class="section-description">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+            incididunt ut labore
+          </p>
 
-        <!-- я не джин 🐷 -->
-        <div>
-          <a href="" class="button primary">Join Today</a>
-          <a href="" class="button secondary">Contact us</a>
+          <!-- я не джин 🐷 -->
+          <div>
+            <a href="" class="button primary">Join Today</a>
+            <a href="" class="button secondary">Contact us</a>
+          </div>
         </div>
       </section>
     </main>
 
     <!-- Подвал -->
-    <footer>
-      <ul class="list">
-        <li><a href="">Mobile app</a></li>
-        <li><a href="">Community</a></li>
-        <li><a href="">Company</a></li>
-      </ul>
+    <footer class="page-footer">
+      <div class="container">
+        <a href="./index.html" class="logo">
+          <img src="./images/logo.svg" alt="Логотип компании" />
+          photo
+        </a>
 
-      <a href="./index.html" class="logo">
-        <img src="./images/logo.svg" alt="Логотип компании" />
-        photo
-      </a>
+        <section class="footer-nav">
+          <h2 class="section-title">External links</h2>
 
-      <ul class="list">
-        <li><a href="">Help desk</a></li>
-        <li><a href="">Blog</a></li>
-        <li><a href="">Resources</a></li>
-      </ul>
+          <h3 class="sub-title">Mobile app</h3>
+          <ul class="list">
+            <li><a class="link" href="">Features</a></li>
+            <li><a class="link" href="">Live share</a></li>
+            <li><a class="link" href="">Video record</a></li>
+          </ul>
 
-      <ul class="list">
-        <li><a href="" aria-label="Facebook link"></a></li>
-        <li><a href="" aria-label="Twitter link"></a></li>
-        <li><a href="" aria-label="Instagrame link"></a></li>
-        <li><a href="" aria-label="LinkedIn link"></a></li>
-      </ul>
+          <h3 class="sub-title">Community</h3>
+          <ul class="list">
+            <li><a class="link" href="">Featured artists</a></li>
+            <li><a class="link" href="">The Portal</a></li>
+            <li><a class="link" href="">The Portal</a></li>
+          </ul>
 
-      <p>&copy; Photo, Inc. 2019. We love our users!</p>
+          <h3 class="sub-title">Company</h3>
+          <ul class="list">
+            <li><a class="link" href="">About us</a></li>
+            <li><a class="link" href="">Contact us</a></li>
+            <li><a class="link" href="">History</a></li>
+          </ul>
+        </section>
+
+        <ul class="auth-nav list">
+          <li><a href="" class="button primary">Register</a></li>
+          <li><a href="" class="button secondary">Log in</a></li>
+        </ul>
+
+        <p class="copyright">&copy; Photo, Inc. 2019. We love our users!</p>
+
+        <div class="social">
+          <p class="label">Follow us:</p>
+
+          <ul class="list">
+            <li><a href="" aria-label="Facebook link"></a></li>
+            <li><a href="" aria-label="Twitter link"></a></li>
+            <li><a href="" aria-label="Instagrame link"></a></li>
+            <li><a href="" aria-label="LinkedIn link"></a></li>
+          </ul>
+        </div>
+      </div>
     </footer>
   </body>
 </html>
