--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
         </a>
 
         <ul class="site-nav list">
-          <li><a href="./compendium.html" class="link">Разбор конспекта</a></li>
           <li><a href="" class="link current">Features</a></li>
           <li><a href="" class="link">Pricing</a></li>
           <li><a href="" class="link">Community</a></li>
@@ -61,36 +60,36 @@
             <li>
               <h3 class="title">Sed ut perspiciatis</h3>
               <p>
-                Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia
-                consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro
-                quisquam est.
+                Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit
+                aut fugit, sed quia consequuntur magni dolores eos qui ratione
+                voluptatem sequi nesciunt. Neque porro quisquam est.
               </p>
               <a href="" class="button secondary">Learn more</a>
             </li>
             <li>
               <h3 class="title">Lorem ipsum dolor</h3>
               <p>
-                Amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                laboris nisi.
+                Amet, consectetur adipiscing elit, sed do eiusmod tempor
+                incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+                veniam, quis nostrud exercitation ullamco laboris nisi.
               </p>
               <a href="" class="button secondary">Learn more</a>
             </li>
             <li>
               <h3 class="title">Nemo enim ipsam</h3>
               <p>
-                Consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro
-                quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit,
-                sed quia non numquam.
+                Consequuntur magni dolores eos qui ratione voluptatem sequi
+                nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor
+                sit amet, consectetur, adipisci velit, sed quia non numquam.
               </p>
               <a href="" class="button secondary">Learn more</a>
             </li>
             <li>
               <h3 class="title">Tempor incididunt</h3>
               <p>
-                Eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem
-                ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius
-                modi tempora.
+                Eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam
+                est, qui dolorem ipsum quia dolor sit amet, consectetur,
+                adipisci velit, sed quia non numquam eius modi tempora.
               </p>
               <a href="" class="button secondary">Learn more</a>
             </li>
@@ -104,21 +103,31 @@
           <h2 class="section-title">Example of work</h2>
           <ul class="work-list list">
             <li class="item">
-              <img src="./images/placeholder.png" alt="Примеры работ" width="750" />
+              <img
+                src="./images/placeholder.png"
+                alt="Примеры работ"
+                width="750"
+              />
               <h3 class="title">Sed ut perspiciatis unde omnis</h3>
               <p>
-                Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia
-                consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro
-                quisquam est, qui dolorem.
+                Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit
+                aut fugit, sed quia consequuntur magni dolores eos qui ratione
+                voluptatem sequi nesciunt. Neque porro quisquam est, qui
+                dolorem.
               </p>
             </li>
             <li class="item">
-              <img src="./images/placeholder.png" alt="Примеры работ" width="750" />
+              <img
+                src="./images/placeholder.png"
+                alt="Примеры работ"
+                width="750"
+              />
               <h3 class="title">Sed ut perspiciatis unde omnis</h3>
               <p>
-                Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia
-                consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro
-                quisquam est, qui dolorem.
+                Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit
+                aut fugit, sed quia consequuntur magni dolores eos qui ratione
+                voluptatem sequi nesciunt. Neque porro quisquam est, qui
+                dolorem.
               </p>
             </li>
           </ul>
@@ -130,8 +139,8 @@
         <div class="container">
           <h2 class="section-title centered">You’re in good company</h2>
           <p class="section-description">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-            incididunt ut labore
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore
           </p>
           <ul class="list">
             <li>
@@ -182,8 +191,8 @@
       <section class="section">
         <div class="container">
           <p class="section-description">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-            incididunt ut labore
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore
           </p>
 
           <!-- я не джин 🐷 -->
