--- a/index.html
+++ b/index.html
@@ -18,28 +18,116 @@
 
   <body>
     <!-- Шапка сайта -->
-
     <header class="page-header">
-      <nav class="container">
+      <nav class="container main-nav">
         <a href="./index.html" class="logo">
           <img src="./images/logo.svg" alt="Логотип компании" />
           photo
         </a>
 
         <ul class="site-nav list">
-          <li><a href="" class="link current">Features</a></li>
-          <li><a href="" class="link">Pricing</a></li>
-          <li><a href="" class="link">Community</a></li>
-          <li><a href="" class="link">Support</a></li>
+          <li class="item"><a href="" class="link current">Features</a></li>
+          <li class="item"><a href="" class="link">Pricing</a></li>
+          <li class="item"><a href="" class="link">Community</a></li>
+          <li class="item"><a href="" class="link">Support</a></li>
         </ul>
 
         <ul class="auth-nav list">
-          <li><a href="" class="button secondary">Log in</a></li>
-          <li><a href="" class="button primary">Register</a></li>
+          <li class="item"><a href="" class="button secondary">Log in</a></li>
+          <li class="item"><a href="" class="button primary">Register</a></li>
         </ul>
       </nav>
     </header>
 
+    <!-- <div class="test-container">
+      <div class="flex-container">
+        <div class="flex-element">
+          Iste necessitatibus hic in perspiciatis voluptatum at dolor quisquam
+          ratione iusto voluptas, nemo dolorum blanditiis vel officia assumenda
+          beatae nihil maiores ex esse eligendi fuga. Perspiciatis voluptatem
+          ducimus placeat dolores.
+        </div>
+        <div class="flex-element">
+          Iste necessitatibus hic in perspiciatis voluptatum at dolor quisquam
+          ratione iusto voluptas, nemo dolorum blanditiis vel officia assumenda
+          beatae nihil maiores ex esse eligendi fuga. Perspiciatis voluptatem
+          ducimus placeat dolores.
+        </div>
+        <div class="flex-element">
+          Nulla assumenda, laborum omnis tempore, voluptate possimus expedita
+          quod quisquam, aspernatur corrupti esse. Quia asperiores voluptates
+          commodi impedit nam, voluptate quos tempore accusamus ex officiis
+          aperiam quas harum blanditiis quam!
+        </div>
+        <div class="flex-element">
+          Neque, perspiciatis asperiores debitis harum doloremque maiores
+          obcaecati minus provident. Deserunt aperiam mollitia, numquam in culpa
+          libero? Cupiditate, vero consequatur! Molestiae impedit possimus iusto
+          fuga quisquam. Magnam ab veritatis autem?
+        </div>
+        <div class="flex-element">
+          Commodi veniam fuga eum veritatis doloremque voluptates reiciendis
+          vitae. Blanditiis veritatis maxime modi corporis, amet fugit? Maxime
+          iure placeat dolorum sit dolor? Voluptatibus magni itaque
+          necessitatibus ex nisi qui eligendi?
+        </div>
+        <div class="flex-element">
+          Illum sit magnam impedit voluptatem quidem laboriosam, pariatur
+          numquam laudantium iusto labore ratione beatae harum facere, qui
+          cupiditate fugiat veritatis alias sed quisquam rerum expedita
+          voluptatum modi error! Quis, est?
+        </div>
+      </div>
+    </div> -->
+
+    <!-- Мой пример -->
+    <!-- <div class="my-container">
+      <ul class="my-portfolio">
+        <li class="item">
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. At assumenda
+          natus ad soluta sit amet ab repellendus quis itaque sed.
+        </li>
+        <li class="item">
+          Iste obcaecati architecto ratione quaerat! Ut aspernatur fuga ipsam
+          praesentium nobis nisi velit vel voluptates. Natus tempore officiis
+          delectus error!
+        </li>
+        <li class="item">
+          Omnis adipisci veniam magni placeat officiis? Eaque in perferendis hic
+          laboriosam, molestiae dolores, exercitationem quas, alias pariatur
+          repudiandae nobis omnis?
+        </li>
+        <li class="item">
+          Perferendis corrupti sint illum quis, excepturi, dolore voluptatem
+          sit, unde dicta consequuntur suscipit in ab ullam. Nulla error
+          doloribus odio.
+        </li>
+        <li class="item">
+          Quos amet impedit ea est quidem expedita repellendus. Quod, a! Qui
+          harum maiores corrupti numquam, nihil reiciendis praesentium neque
+          aliquam.
+        </li>
+        <li class="item">
+          Officiis eum hic non vitae explicabo id autem, commodi, neque et, quis
+          enim aliquam quam cum nisi reiciendis excepturi voluptates!
+        </li>
+        <li class="item">
+          Officia, assumenda vitae perferendis asperiores nihil repudiandae
+          quisquam saepe nam molestiae sint distinctio minus dicta fuga quod non
+          sapiente fugiat?
+        </li>
+        <li class="item">
+          Nulla iste, sapiente reiciendis deserunt nihil quibusdam tenetur porro
+          id eum dolor minima molestias dolores incidunt nobis fuga vero
+          voluptas!
+        </li>
+        <li class="item">
+          Nulla iste, sapiente reiciendis deserunt nihil quibusdam tenetur porro
+          id eum dolor minima molestias dolores incidunt nobis fuga vero
+          voluptas!
+        </li>
+      </ul>
+    </div> -->
     <!-- Уникальный контент -->
     <main>
       <!-- Герой -->
@@ -57,16 +145,16 @@
           </h2>
 
           <ul class="feature-list list">
-            <li>
+            <li class="item">
               <h3 class="title">Sed ut perspiciatis</h3>
               <p>
                 Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit
                 aut fugit, sed quia consequuntur magni dolores eos qui ratione
-                voluptatem sequi nesciunt. Neque porro quisquam est.
+                voluptatem sequi nesciunt. Neque porro quisquam.
               </p>
               <a href="" class="button secondary">Learn more</a>
             </li>
-            <li>
+            <li class="item">
               <h3 class="title">Lorem ipsum dolor</h3>
               <p>
                 Amet, consectetur adipiscing elit, sed do eiusmod tempor
@@ -75,7 +163,7 @@
               </p>
               <a href="" class="button secondary">Learn more</a>
             </li>
-            <li>
+            <li class="item">
               <h3 class="title">Nemo enim ipsam</h3>
               <p>
                 Consequuntur magni dolores eos qui ratione voluptatem sequi
@@ -84,7 +172,7 @@
               </p>
               <a href="" class="button secondary">Learn more</a>
             </li>
-            <li>
+            <li class="item">
               <h3 class="title">Tempor incididunt</h3>
               <p>
                 Eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam
@@ -108,13 +196,15 @@
                 alt="Примеры работ"
                 width="750"
               />
-              <h3 class="title">Sed ut perspiciatis unde omnis</h3>
-              <p>
-                Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit
-                aut fugit, sed quia consequuntur magni dolores eos qui ratione
-                voluptatem sequi nesciunt. Neque porro quisquam est, qui
-                dolorem.
-              </p>
+              <div class="content">
+                <h3 class="title">Sed ut perspiciatis unde omnis</h3>
+                <p>
+                  Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut
+                  odit aut fugit, sed quia consequuntur magni dolores eos qui
+                  ratione voluptatem sequi nesciunt. Neque porro quisquam est,
+                  qui dolorem.
+                </p>
+              </div>
             </li>
             <li class="item">
               <img
@@ -122,13 +212,15 @@
                 alt="Примеры работ"
                 width="750"
               />
-              <h3 class="title">Sed ut perspiciatis unde omnis</h3>
-              <p>
-                Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit
-                aut fugit, sed quia consequuntur magni dolores eos qui ratione
-                voluptatem sequi nesciunt. Neque porro quisquam est, qui
-                dolorem.
-              </p>
+              <div class="content">
+                <h3 class="title">Sed ut perspiciatis unde omnis</h3>
+                <p>
+                  Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut
+                  odit aut fugit, sed quia consequuntur magni dolores eos qui
+                  ratione voluptatem sequi nesciunt. Neque porro quisquam est,
+                  qui dolorem.
+                </p>
+              </div>
             </li>
           </ul>
         </div>
@@ -138,47 +230,47 @@
       <section class="section">
         <div class="container">
           <h2 class="section-title centered">You’re in good company</h2>
-          <p class="section-description">
+          <p class="section-description centered">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
             eiusmod tempor incididunt ut labore
           </p>
-          <ul class="list">
-            <li>
+          <ul class="client-list list">
+            <li class="item">
               <a href="">
                 <img src="./images/icon.svg" alt="Логотип компании" />
               </a>
             </li>
-            <li>
+            <li class="item">
               <a href="">
                 <img src="./images/icon.svg" alt="Логотип компании" />
               </a>
             </li>
-            <li>
+            <li class="item">
               <a href="">
                 <img src="./images/icon.svg" alt="Логотип компании" />
               </a>
             </li>
-            <li>
+            <li class="item">
               <a href="">
                 <img src="./images/icon.svg" alt="Логотип компании" />
               </a>
             </li>
-            <li>
+            <li class="item">
               <a href="">
                 <img src="./images/icon.svg" alt="Логотип компании" />
               </a>
             </li>
-            <li>
+            <li class="item">
               <a href="">
                 <img src="./images/icon.svg" alt="Логотип компании" />
               </a>
             </li>
-            <li>
+            <li class="item">
               <a href="">
                 <img src="./images/icon.svg" alt="Логотип компании" />
               </a>
             </li>
-            <li>
+            <li class="item">
               <a href="">
                 <img src="./images/icon.svg" alt="Логотип компании" />
               </a>
@@ -189,14 +281,14 @@
 
       <!-- Регистрация -->
       <section class="section">
-        <div class="container">
-          <p class="section-description">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore
+        <div class="container signUp-section">
+          <p class="section-description no-margin">
+            Lorem ipsum dolor sit amet, consectetur adipiscing <br />
+            elit, sed do eiusmod tempor incididunt ut labore
           </p>
 
           <!-- я не джин 🐷 -->
-          <div>
+          <div class="join-section">
             <a href="" class="button primary">Join Today</a>
             <a href="" class="button secondary">Contact us</a>
           </div>
