--- a/index.html
+++ b/index.html
@@ -5,7 +5,42 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Фон и декоративные элементы</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+      integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <style>
+      img {
+        /* outline: 1px solid black; */
+      }
+
+      img:nth-of-type(2) {
+        /* background-color: palevioletred; */
+      }
+
+      img:nth-of-type(3) {
+        /* background-color: yellowgreen; */
+      }
+
+      img:nth-of-type(4) {
+        /* background-color: blueviolet; */
+      }
+    </style>
     <link rel="stylesheet" href="./css/common.css" />
   </head>
-  <body></body>
+  <body>
+    <ul>
+      <li><a href="./01-background.html">Фон элемента</a></li>
+      <li><a href="./02-multibg.html">Многослойный фон</a></li>
+      <li><a href="./03-pseudoelements.html">Псевдоэлементы</a></li>
+    </ul>
+
+    <img src="./images/red-poppies.jpg" alt="" />
+    <img src="./images/transparent-1.png" alt="" height="430" />
+    <img src="./images/transparent-2.png" alt="" height="430" />
+    <img src="./images/transparent-3.png" alt="" height="430" />
+  </body>
 </html>
