--- a/04-card-overlay.html
+++ b/04-card-overlay.html
@@ -18,25 +18,26 @@
     <article class="product">
       <div class="product-thumb">
         <img src="./images/apples.jpg" alt="Три-красных-яблока-лежат-на-столе" />
+        <div class="product-overlay">
+          <div class="product-actions">
+            <button aria-label="В избранное" class="item">
+              <svg class="icon">
+                <use href="./images/sprite.svg#star"></use>
+              </svg>
+            </button>
 
-        <div class="product-actions">
-          <button aria-label="В избранное" class="item">
-            <svg class="icon">
-              <use href="./images/sprite.svg#star"></use>
-            </svg>
-          </button>
+            <button aria-label="В избранное" class="item">
+              <svg class="icon">
+                <use href="./images/sprite.svg#edit"></use>
+              </svg>
+            </button>
 
-          <button aria-label="В избранное" class="item">
-            <svg class="icon">
-              <use href="./images/sprite.svg#edit"></use>
-            </svg>
-          </button>
-
-          <button aria-label="В избранное" class="item">
-            <svg class="icon">
-              <use href="./images/sprite.svg#home"></use>
-            </svg>
-          </button>
+            <button aria-label="В избранное" class="item">
+              <svg class="icon">
+                <use href="./images/sprite.svg#home"></use>
+              </svg>
+            </button>
+          </div>
         </div>
       </div>
 
